@@ -1403,11 +1403,6 @@ control_get_env (void             *data,
 
 		/* this can be a null value */
 		instance = job_details[1];
-	} else if (getpid () == 1) {
-		nih_dbus_error_raise_printf (
-			DBUS_INTERFACE_UPSTART ".Error.PermissionDenied",
-			_("Not permissable to modify PID 1 job environment"));
-		return -1;
 	}
 
 	/* Verify that job name is valid */
